# databot3000

./: .gitignore  .neon.json.example  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: terraform-checks.yml
src/databot/: README.md  __init__.py  config.py
src/databot/auth/: __init__.py  service_account.py
src/databot/core/: __init__.py  state_loader.py
src/databot/neondb/: __init__.py  client.py
src/databot/storage/: __init__.py  bucket.py
terraform/: README.md
terraform/environments/dev/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
terraform/environments/shared/: providers.tf  variables.tf  versions.tf
terraform/modules/budget/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/gcp-apis/: main.tf  outputs.tf  variables.tf
terraform/modules/service-account/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/modules/workbench/: main.tf  outputs.tf  variables.tf
tests/: test_neondb.py
