[project]
name = "databot"
version = "0.1.0"
description = "Data Extraction and Loading Tools"
readme = "README.md"
authors = [
    { email = "dvd.hnrchs@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "modal>=1.0.5",
    "asyncpg>=0.30.0",
    "pre-commit>=4.0.1",
]

[project.scripts]
scraper = "databot:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
